# imc-prosperity4

./: .gitignore  README.md  main.py  pyproject.toml  tutorial.ipynb
docs/: ROUND1.md  ROUND2.md  ROUND3.md  SETUP-INSTRUCTIONS.md  TIPS-ON-WRITING-ALGO.md  WORKFLOW.md  Writing-an-algo-in-python.md  visualizer (1).ipynb
round1/: jsonpickle.py  manual_challenge.ipynb  test_trader.py  trader.py  visualizer.ipynb
round1/ /: __main__.py  backtester.py  test_runner.py
round1/backtester/: __main__.py  activity_log_creator.py  back_data_reader.py  backtester.py  order_match_maker.py  test_runner.py
round1/notebooks/: agent_EDA.ipynb  analyze_results.ipynb  eda.ipynb  manual_challenge.ipynb  manual_challenge_final.ipynb
round1/strats/: trader-selina.py  trader10.py  trader11.py  trader12.py  trader13.py  trader2.py  trader3.py  trader4-2.py  trader4.py  trader5.py  trader6-2.py  trader6.py  trader7.py  trader8-2.py  trader8-3.py  trader8-4.py  trader8.py  trader9.py  trader_skeleton.py
round2/: datamodel.py  trader.py  trader_skeleton.py
round2/notebooks/: analyze_results.ipynb
round2/strats/: trader1.py  trader2.py  trader3.py  trader4.py
round3/: SUBMISSION_ANALYSIS.md  Trader.py  analysis.py  backtest.py  pyproject.toml  round3_EDA.py  round3_trading_strategies.py
round3/analysis_output/: hydrogel_summary.csv  iv_summary_corrected.csv  options_summary.csv
round3/eda_output/: mispricing_summary.csv
round3/strats/: trader1.py  (+14 more)
round4/: Trader.py  analysis.py  backtester.py  datamodel.py
tools/: README.md  run_backtest.py  test_run_backtest.py  viz.py
(+94 files in other folders)
