[project]
name = "imcprosperity4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jsonpickle>=4.1.1",
    "matplotlib>=3.10.8",
    "nbconvert>=7.17.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "prosperity4btest>=1.0.1",
    "plotly>=5.24.0",
    "dash>=2.18.0",
    "scipy>=1.17.1",
]
